syntax = "proto3";

package GrpcDeviceCatalog;

service DeviceCatalog {
  rpc DeviceCatalogQuery (DeviceCatalogQueryRequest) returns (DeviceCatalogQueryReply) {}
  rpc DeviceCatalogSubscribe (DeviceCatalogSubscribeRequest) returns (DeviceCatalogSubscribeReply) {}
  rpc DeviceCatalogNotify (DeviceCatalogNotifyRequest) returns (DeviceCatalogNotifyReply) {}
}

message DeviceCatalogQueryRequest {
  string deviceid = 1;
}

message DeviceCatalogQueryReply {
  Instance Catalog = 1;
}

message Instance {
  CommandType CmdType = 1;
  string DeviceID = 2;
  DevList DeviceList = 3;
  string SN = 4;
  string SumNum = 5;
}

enum CommandType {
  Unknown = 0;
  Keepalive = 1;
  Catalog = 2;
  Play = 3;
  Playback = 4;
  DeviceControl = 5;
  Alarm = 6;
  DeviceInfo = 7;
  DeviceStatus = 8;
  RecordInfo = 9;
  Download = 10;
  ConfigDownload = 11;
  Broadcast = 12;
  PresetQuery = 13;
  MobilePosition = 14;
  DeviceConfig = 15;
  MediaStatus = 16;
}

message DevList
{ 
  repeated Item Items = 1;
}

message Item{
  string DeviceID = 1;
  string Name = 2;
  string Manufacturer = 3;
  string Model = 4;
  string Owner = 5;
  string CivilCode = 6;
  string Block = 7;
  string Address = 8;
  int32 Parental = 9;
  string ParentID = 10;
  string BusinessGroupID = 11;
  int32 SafetyWay = 12;
  int32 RegisterWay = 13;
  string CertNum = 14;
  int32 Certifiable = 15;
  string ErrCode = 16;
  string EndTime = 17;
  string Secrecy = 18;
  string IPAddress = 19;
  int32 Port = 20;
  string Password = 21;
  DevStatus Status = 22;
  double Longitude = 23;
  double Latitude = 24;
  Info InfList = 25;
  string RemoteEP = 26;
}

enum DevStatus {
	ON = 0;
	OFF = 1;
}

message Info {
  int32 PTZType = 1;
  string PTZTypeValue = 2;
  int32 PositionType = 3;
  string PositionTypeValue = 4;
  int32 RoomType = 5;
  string RoomTypeValue = 6;
  int32 UseType = 7;
  string UseTypeValue = 8;
  int32 SupplyLightType = 9;
  string SupplyLightTypeValue = 10;
  int32 DirectionType = 11;
  string DirectionTypeValue = 12;
  string Resolution = 13;
  string BusinessGroupID = 14;
  string DownloadSpeed = 15;
  int32 SVCSpaceSupportMode = 16;
  string SVCSpaceSupportModeValue = 17;
  int32 SVCTimeSupportMode = 18;
  string SVCTimeSupportModeValue = 19;
}

message DeviceCatalogSubscribeRequest {
	string deviceid = 1;
}

message DeviceCatalogSubscribeReply {
  string message = 1;
}

message DeviceCatalogNotifyRequest {
}

message DeviceCatalogNotifyReply {
  Item item = 1;
}
